log/build_2022-06-24_12-13-29/game_engine/stdout_stderr.log
running egg_info
writing c:\Users\marti\Documents\GitHub\GameEngine\build\game_engine\game_engine.egg-info\PKG-INFO
writing dependency_links to c:\Users\marti\Documents\GitHub\GameEngine\build\game_engine\game_engine.egg-info\dependency_links.txt
writing entry points to c:\Users\marti\Documents\GitHub\GameEngine\build\game_engine\game_engine.egg-info\entry_points.txt
writing requirements to c:\Users\marti\Documents\GitHub\GameEngine\build\game_engine\game_engine.egg-info\requires.txt
writing top-level names to c:\Users\marti\Documents\GitHub\GameEngine\build\game_engine\game_engine.egg-info\top_level.txt
reading manifest file 'c:\Users\marti\Documents\GitHub\GameEngine\build\game_engine\game_engine.egg-info\SOURCES.txt'
writing manifest file 'c:\Users\marti\Documents\GitHub\GameEngine\build\game_engine\game_engine.egg-info\SOURCES.txt'
running build
running build_py
copying game_engine/Engine/Players\ai.py -> c:\Users\marti\Documents\GitHub\GameEngine\build\game_engine\build\lib\game_engine/Engine/Players
running install
running install_lib
copying c:\Users\marti\Documents\GitHub\GameEngine\build\game_engine\build\lib\game_engine\Engine\Players\ai.py -> c:\Users\marti\Documents\GitHub\GameEngine\install\game_engine\Lib\site-packages\game_engine\Engine\Players
writing byte-compilation script 'C:\Users\marti\AppData\Local\Temp\tmp8ja0_7xz.py'
c:\opt\ros\foxy\x64\python.exe C:\Users\marti\AppData\Local\Temp\tmp8ja0_7xz.py
  File "c:\Users\marti\Documents\GitHub\GameEngine\install\game_engine\Lib\site-packages\game_engine\Engine\Players\ai.py", line 1
    from ../boards import *
           ^
SyntaxError: invalid syntax

removing C:\Users\marti\AppData\Local\Temp\tmp8ja0_7xz.py
running install_data
running install_egg_info
removing 'c:\Users\marti\Documents\GitHub\GameEngine\install\game_engine\Lib\site-packages\game_engine-0.0.0-py3.8.egg-info' (and everything under it)
Copying c:\Users\marti\Documents\GitHub\GameEngine\build\game_engine\game_engine.egg-info to c:\Users\marti\Documents\GitHub\GameEngine\install\game_engine\Lib\site-packages\game_engine-0.0.0-py3.8.egg-info
running install_scripts
Installing lan-script.py script to c:\Users\marti\Documents\GitHub\GameEngine\install\game_engine\lib\game_engine
Installing lan.exe script to c:\Users\marti\Documents\GitHub\GameEngine\install\game_engine\lib\game_engine
Installing local-script.py script to c:\Users\marti\Documents\GitHub\GameEngine\install\game_engine\lib\game_engine
Installing local.exe script to c:\Users\marti\Documents\GitHub\GameEngine\install\game_engine\lib\game_engine
writing list of installed files to 'c:\Users\marti\Documents\GitHub\GameEngine\build\game_engine\install.log'
